<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content"
    android:layout_width="fill_parent">
    <CheckBoxPreference
        android:key="pref_sendBCMusic"
        android:title="@string/pref_send_music"
        android:checked="false" />
    <CheckBoxPreference
        android:key="pref_sendBCSportsApp"
        android:title="@string/pref_send_sports"
        android:checked="true" />
    <CheckBoxPreference
        android:key="pref_pauseRunOnStart"
        android:title="@string/pref_pause_on_start"
        android:checked="true" />
    <CheckBoxPreference
        android:key="pref_restartSportsApp"
        android:title="@string/pref_restart_sports"
        android:summaryOn="@string/pref_restart_sports_summary_on"
        android:summaryOff="@string/pref_restart_sports_summary_off"
        android:checked="true" />
    <CheckBoxPreference
        android:key="pref_bindToMusicPlayState"
        android:title="@string/pref_bind_to_music_play_state"
        android:summaryOn="@string/pref_bind_to_music_summary_on"
        android:summaryOff="@string/pref_bind_to_music_summary_off"
        android:checked="true" />
    <CheckBoxPreference
        android:key="pref_enableLogging"
        android:title="@string/pref_enable_logging"
        android:checked="false" />
</PreferenceScreen>